# apollo11-codingupmyfuture

./: LICENSE  README.md  apolo-11.py  config_log.py  funciones.py  mover_contenido.py  nombres_reportes.py  prueba.py  pyproject.toml  se_supone.py  setup.cfg  test_pruebas_fecha.py
app/archivos/: funciones.py
app/config/: config_app.yaml  config_argparse.py  config_log.py  config_logging.py
app/main/: apollo11.py
app/models/: config_model.py
app/reportes/: generar_contenido.py  generar_nombre.py
app/utilities/: decorators.py  uso_archivos.py  uso_yaml.py  validar_numeros.py
docs/source/: Alvaro.rst  Apollo-11.rst  Ibarra.rst  Leonardo.rst  conf.py  index.rst  nasa.rst  proyectos.rst
docs/source/_static/: custom.css
tests/: conftest.py  test_crear_carpeta.py  test_mover_archivos.py
